# bobsics

./: Cargo.toml
crates/bobsics-gui/: Cargo.toml
crates/bobsics-gui/src/widget/: button.rs  common.rs  label.rs  mod.rs
crates/bobsics-gui/src/widget/layout/: horizontal_stack.rs  mod.rs  vertical_stack.rs
crates/bobsics-render/: Cargo.toml
crates/bobsics-render/src/: lib.rs  render.rs  utils.rs
crates/bobsics-render/src/components/: mod.rs  quad.rs
crates/bobsics-render/src/components/shaders/: quad.wgsl
src/: main.rs
