[workspace]
members = [
    ".",
    "crates/*",
]


[package]
name = "bobsics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.14.0"
winit = "0.27.5"

bobsics-render = { path = "crates/bobsics-render" }
pollster = "0.2.5"
