[package]
name = "bobsics-render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.0", features = ["derive"] }
raw-window-handle = "0.5.0"
wgpu = "0.14.0"
winit = "0.27.5"
